Fixed visual glitch on mobile engines

--- a/projeto/css/style.css
+++ b/projeto/css/style.css
@@ -251,6 +251,7 @@ header .paragraph-light {
   overflow: hidden;
   line-height: 0;
   margin-top: 100px;
+  transform: translateY(1px);
 }
 
 .custom-divider-bottom svg {
